[package]
name = "ndfuse"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
libc = { path = "./libc" }
anyhow = "1.0.97"
fern = "0.7.1"
chrono = "0.4.40"
log = "0.4.26"
errno = "0.3.10"
serde_repr = "0.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"]}
syscall-numbers = "4.0.2"
uds = "0.4.2"
nix = { version = "0.29", features = ["process", "socket"] }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11"
command-fds = "0.3.2"

[[bin]]
name = "ndfuse-proxy"
path = "src/main.rs"

[lib]
name = "ndfuseshim"
path = "src/lib.rs"
crate-type = ["cdylib"]
